# app/docs/swagger.json
@@ -9,6 +9,48 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
+        "/all_comments": {
+            "get": {
+                "description": "Gets all comments",
+                "summary": "Returns all unapproved comments",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/postgres.UnapprovedComment"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/approve_comment": {
+            "patch": {
+                "description": "Updates an entry in db",
+                "summary": "To accept or delete comment",
+                "parameters": [
+                    {
+                        "description": "Approve",
+                        "name": "tags",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/entity.ApproveRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/entity.OkResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/auth": {
             "post": {
                 "description": "Creates an entry in cookie",
@@ -159,6 +201,17 @@
         }
     },
     "definitions": {
+        "entity.ApproveRequest": {
+            "type": "object",
+            "properties": {
+                "approve": {
+                    "type": "boolean"
+                },
+                "article_id": {
+                    "type": "integer"
+                }
+            }
+        },
         "entity.AuthRequest": {
             "type": "object",
             "properties": {
@@ -254,6 +307,14 @@
                 }
             }
         },
+        "entity.OkResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
         "postgres.Article": {
             "type": "object",
             "properties": {
@@ -286,6 +347,20 @@
             "type": "object",
             "properties": {
                 "comment": {
+                    "type": "string"
+                },
+                "commentator": {
+                    "type": "string"
+                }
+            }
+        },
+        "postgres.UnapprovedComment": {
+            "type": "object",
+            "properties": {
+                "comment": {
+                    "type": "string"
+                },
+                "comment_id": {
                     "type": "string"
                 },
                 "commentator": {
